--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,21 @@
-Version 0.5.1
-=============
+Version 0.9
+===========
+
+Refactored separating roles to functions. SEED has a concept of
+multifunctional roles and this separates out our roles before we search
+for them.
+
+Version 0.8
+===========
+
+Version 0.7
+===========
+
+Version 0.6
+===========
 
 -   Removed installation dependencies from setup.py because they break
-    installation! You need to install the dependencies manually
+    installation! You need to install the dependencies manually  
 -   Refactored the code to remove the os.environ dependencies
 
 Version 0.5
