updating version incrementally

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,10 @@
+Version 0.951
+=============
+
+Removed the author tag
+
+It is superflous, that is what versioning is for.
+
 Version 0.95
 ============
 
