--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,27 @@
+VERSION 1.3
+
+Updated parse/model_seed.py to work with reformatted ModelSEED database.
+
+This restores base functionality, but also breaks compatibility with
+many of the accessory and testing scripts.
+
+Added function to obtain InChI keys for compounds in your sbml
+
+-   example_code/extract_inchi.py
+
+Added function to convert .gff output from rast into assigned_functions.
+
+-   example_code/extract_functions.py
+
+Added example code compatible with the new database and python3.
+
+-example_code/run_fba_sbml3.py
+
+Updated example_code/sbml_to_fba.py for compatibility.
+
+Update iPython notebook From_functional_roles_to_gap-filling.ipynb to
+include updated information and extract_functions.py
+
 
 
 VERSION 1.2
